# python-excel

./: .dockerignore  .gitignore  CACHE-REUSE-SUMMARY.md  CRITICAL-PERFORMANCE-FIX.md  DOCKER_TEST_REPORT.md  DOCKER_VALIDATION_COMPLETE.md  Dockerfile  Dockerfile.notebook  Excel_DataFrame_Processor_Demo_Fixed.ipynb  Excel_DataFrame_Processor_Example.ipynb  Excel_DataFrame_Processor_Fixed.ipynb  FIX-COUNT-QUERY.md  FIX-REPL-TYPING.md  IMPLEMENTATION-COMPLETE.md  NOTEBOOK_USAGE.md  PERFORMANCE-RESULTS.md  QUICK-START-CACHE.md  QUICKSTART.md  README-Docker.md  README.md  REPL-AUTOCACHE-FEATURE.md  SQLITE-CACHE-SUMMARY.md  SQLITE-CACHE.md  STRESS-TEST-RESULTS.md  create_large_sample_data.py  create_massive_dataset.py  create_sample_data.py  create_spaced_columns_data.py  debug_cache_usage.py  demo_cache_behavior.py  demo_sqlite_cache.py  diagnose_repl.sh  docker-compose.yml  docker-run.sh  example_usage.py  mock-docker-test.py  pyproject.toml  quick_test_fix.py  stress_test_benchmark.py  test-docker-setup.py  (+14 more)
.kiro/specs/excel-dataframe-processor/: design.md  requirements.md  tasks.md
excel_processor/: __init__.py  __main__.py  config.py  dataframe_manager.py  excel_loader.py  exceptions.py  logger.py  main.py  models.py  notebook.py  repl.py  sql_ast.py  sql_parser.py  sqlite_cache.py
massive_data/: stress_test_queries.txt
tests/: __init__.py  conftest.py  test_dataframe_manager.py  test_excel_loader.py  test_sql_parser.py
