[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-dataframe-processor"
version = "0.1.0"
description = "A REPL interface for executing Oracle-like SQL queries on Excel files"
authors = [
    {name = "Excel Processor Team", email = "team@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "sqlparse>=0.4.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
notebook = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "jupyterlab>=3.0.0",
]

[project.scripts]
excel-processor = "excel_processor.main:main"

[tool.hatch.build.targets.wheel]
packages = ["excel_processor"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=excel_processor --cov-report=term-missing --cov-report=html"